--- a/src/components/menu_item/MenuItem.scss
+++ b/src/components/menu_item/MenuItem.scss
@@ -7,9 +7,17 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  cursor: pointer;
+  overflow: hidden;
+  &:hover {
+    .background-image {
+      transform: scale(1.1);
+      transition: transform 6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    }
+    .content {
+      opacity: 0.9;
+    }
+  }
   &.large {
     height: 380px;
   }
@@ -22,6 +30,14 @@
     margin-left: 7.5px;
   }
 
+  .background-image {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
   .content {
     height: 90px;
     padding: 0 25px;
@@ -30,7 +46,9 @@
     align-items: center;
     justify-content: center;
     border: 1px solid black;
-
+    background-color: #fff;
+    opacity: 0.7;
+    position: absolute;
     .title {
       font-weight: bold;
       margin-bottom: 6px;
