--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -1,5 +1,5 @@
 .login {
-  width: 30vw;
+  width: 380px;
   display: flex;
   flex-direction: column;
   .title {
@@ -8,5 +8,9 @@
   }
   .subtitle {
     font-size: 2rem;
+  }
+  .buttons {
+    display: flex;
+    justify-content: space-between;
   }
 }
