--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+html {
+  font-size: 10px;
+}
+body {
+  font-family: 'Open Sans Condensed', sans-serif;
+  padding: 2rem 6rem;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 a {
   text-decoration: none;
   color:#000;
