--- a/src/components/collection_item/CollectionItem.scss
+++ b/src/components/collection_item/CollectionItem.scss
@@ -4,6 +4,16 @@
   flex-direction: column;
   height: 350px;
   align-items: center;
+  position: relative;
+  &:hover {
+    .image {
+      opacity: 0.8;
+    }
+    .custom-button {
+      display: block;
+      opacity: 0.85;
+    }
+  }
 
   .image {
     width: 100%;
@@ -28,5 +38,12 @@
     .price {
       width: 10%;
     }
+  }
+  .custom-button {
+    width: 80%;
+    opacity: 0.7;
+    position: absolute;
+    top: 255px;
+    display: none;
   }
 }
