--- a/src/components/utils/custom_button/CustomButton.scss
+++ b/src/components/utils/custom_button/CustomButton.scss
@@ -28,4 +28,14 @@
       border: none;
     }
   }
+  &.inverted {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    &:hover {
+      background-color: black;
+      color: white;
+      border: none;
+    }
+  }
 }
