--- a/src/pages/checkout/checkout.scss
+++ b/src/pages/checkout/checkout.scss
@@ -24,8 +24,14 @@
   }
 
   .total {
-    margin-top: 30px;
+    margin-top: 3rem;
     margin-left: auto;
-    font-size: 36px;
+    font-size: 3.6rem;
+  }
+  .test-warning {
+    text-align: center;
+    margin-top: 4rem;
+    margin-bottom: 1rem;
+    color: red;
   }
 }
